# Jod-AI

./: .gitignore  README.md
backend/: .env.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: sub_agent.py
backend/app/api/: chat.py  files.py  models.py  sessions.py  tools.py
backend/app/config/: settings.py
backend/app/core/: agent.py  context.py  llm.py
backend/app/db/: models.py  session.py
backend/app/skills/: manager.py
backend/app/tools/: file_manager.py  registry.py  skills.py  sub_agents.py  system_tools.py  web_search.py
frontend/: package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/e2e/: landing.spec.ts
frontend/playwright-report/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  hooks.ts
plans/: pr-3-recap.md
plans/pr-3-recap/: plan.mdx
